add route to get quotient familial from the CAF
