# back/routes/index.js
@@ -26,6 +26,7 @@ exports.configure = function (app, options) {
   app.get('/api/ping/impots', impotsController.ping);
   app.get('/api/impots/adress', impotsController.adress);
   app.get('/api/caf/attestation/qf', cafController.attestationQf);
+  app.get('/api/caf/qf', cafController.getQf);
   app.get('/api/caf/attestation/droits', cafController.attestationDroits);
   app.get('/api/ping/caf', cafController.ping);
   app.get('/api/admin/users', adminController.getUsers);
