# swagger/api-particulier.yaml
@@ -219,6 +219,54 @@ paths:
             schema:
               $ref: '#/definitions/Error'
 
+  /caf/qf:
+    get:
+      summary: Quotient familial de la CAD
+      description: |
+        Le service récupérer le quotient familial, sa date de calcul et les allocataires.
+      parameters:
+          - name: numeroAllocataire
+            in: query
+            description: Numéro d'allocataire
+            required: true
+            type: number
+            format: integer
+          - name: codeOrganisme
+            in: query
+            description: Code organisme de la CAF (un par code postal)
+            required: true
+            type: number
+            format: integer
+          - name: X-API-Key
+            in: header
+            description: Token d'identification de l'API
+            required: true
+            type: string
+          - name: X-User
+            in: header
+            description: Utilisateur final de l'API
+            required: false
+            type: string
+      tags:
+        - CAF
+      responses:
+        '200':
+          description: Le quotient familial
+          schema:
+            $ref: '#/definitions/QuotientFamilial'
+        '401':
+          description: Le token ne vous permet d'accèder à l'API
+          schema:
+            $ref: '#/definitions/Error'
+        '404':
+          description: 'Les paramètres fournis sont incorrects ou ne correspondent pas à un allocataire CAF'
+          schema:
+            $ref: '#/definitions/Error'
+        default:
+          description: Unexpected error
+          schema:
+            $ref: '#/definitions/Error'
+
   /ping:
     get:
       summary: Service pour connaitre si l'application fonctionne correctement
@@ -356,6 +404,28 @@ definitions:
       adresse:
         type: string
         description: adresse fiscale de l'année passée
+
+
+  QuotientFamilial:
+    type: object
+    properties:
+      quotientFamilial:
+        type: integer
+        description: Quotient familial
+      allocataires:
+        type: array
+        description: Noms et prénom des personnes allocataire de la CAF
+        items:
+          type: string
+      annee:
+        type: integer
+        description: Année du quotient familial
+      mois:
+        type: integer
+        description: Mois du quotient familial
+
+
+
 
   Error:
     type: object
